@@ -347,8 +347,7 @@ void            Epplet_change_label(Epplet_gadget gadget, char *label);
 
 /* PLEASE DO NOT USE THESE FUNCTIONS YET, THEY ARE NOT STABLE */
 
-Epplet_window Epplet_create_window(int w,int h,int x,int y,char *title,
-                                   char vertical);
+Epplet_window Epplet_create_window(int w,int h,char *title, char vertical);
 void Epplet_window_show(Epplet_window win);
 void Epplet_window_hide(Epplet_window win);
 void Epplet_window_destroy(Epplet_window win);
